# model-registry

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.fastapi  Dockerfile.r  Dockerfile.streamlit  LICENSE  README.MD  README.md  UI-FastApi.py  docker-compose.yml  dockerfile  mypy.ini  pyproject.toml  requirements.txt
Project_IndPenSim/: app.py  model_registry.py  pyproject.toml  requirements.txt
Project_IndPenSim/Project_IndPenSim/: model_registry.py  pyproject.toml  requirements.txt
Project_IndPenSim/Project_IndPenSim/configs/: 0001_[python]_penicillin_RF.yaml  0007_[python]_penicillin_SVM.yaml  0009_[Python]_penicillin_LSTM.yaml
Project_IndPenSim/Project_IndPenSim/services/r/models/: 0004_[R]_penicillin_CART.rds  0006_[R]_penicillin_M5.model
Project_IndPenSim/configs/: 0001_[python]_penicillin_RF.yaml  0005_[python]_penicillin_CART.yaml  0007_[python]_penicillin_SVM.yaml  0008_[Python]_penicillin_GBM.yaml  0009_[Python]_penicillin_LSTM.yaml
Project_IndPenSim/services/r/: README.md
SEEK_yaml/: model_recommended_environments.yml  model_types.yml
agents/: SeniorBackendArchitect.md
core/: app.py  model_registry.py  requirements.txt
core/services/r/: Readme.txt  app.R
model_registry/: app.py
model_registry/alembic/: env.py
model_registry/api/: .env.example  app_api.py
model_registry/api/config/: settings.py
model_registry/api/core/: database.py  dependencies.py  registry.py  security.py
model_registry/api/models/: __init__.py  laboratory.py  laboratory_project.py  permission.py  prediction_request.py  predictor.py  project.py  refresh_token.py  role.py  role_permission.py  user.py  user_role.py
model_registry/api/repositories/: user_repository.py
model_registry/api/routers/: auth_router.py  ml_registry_router.py
model_registry/api/routes/: ml_registry_routes.py
model_registry/api/schemas/: user.py
model_registry/api/services/: auth_service.py
model_registry/api/utils/: project_loader.py
model_registry/backend/: .env.example  app_backend.py
model_registry/backend/assets/: dashAgGridComponentFunctions.js  style.css
model_registry/backend/callbacks/: __init__.py  callback_auth.py  callbacks_add_organization.py  callbacks_add_project.py  callbacks_delete_department.py  callbacks_delete_organization.py  callbacks_delete_project.py  callbacks_delete_user.py  callbacks_details_model.py  callbacks_edit_model.py  callbacks_help.py  callbacks_home.py  callbacks_modal_departament.py  callbacks_modal_laboratory.py  callbacks_modal_project.py  callbacks_modal_user.py  callbacks_modal_user_roles.py  callbacks_model_upload.py  callbacks_organization.py  callbacks_project.py  callbacks_sidebar.py  callbacks_toolbar.py  callbacks_upload_model_ibisba.py
model_registry/backend/components/: cards.py  footer.py  models_grid.py  sidebar.py  top_toolbar.py
model_registry/backend/config/: settings.py
model_registry/backend/core/: exceptions.py
model_registry/backend/data/: database.db  users.db
model_registry/backend/layouts/: auth_layout.py  main_layout.py
model_registry/backend/models/: db_init.py  departament.py  departament_laboratory.py  departament_user.py  laboratory.py  laboratory_project.py  laboratory_user.py  organization.py  organization_departament.py  permission.py  project.py  project_model.py  role.py  role_permission.py  user_model.py  user_project_model.py  user_role.py  users.py
model_registry/backend/pages/: add_experiments.py  add_organization.py  add_project.py  add_projects.py  department_modal.py  departments.py  details_model.py  dynamic_models.py  edit_model.py  help.py  home.py  laboratory_modal.py  modal_project.py  model_explainability.py  model_upload.py  monitoring.py  not_found.py  organizations.py  projects.py  upload_model_ibisba.py  user_modal.py  user_modal_roles.py  users.py
model_registry/backend/repositories/: base_repository.py  department_repository.py  laboratory_repository.py  organization_repository.py  project_repository.py  role_repository.py  user_repository.py
model_registry/backend/services/: api_client.py  auth_service.py  data_service.py  department_service.py  laboratory_service.py  model2seek_service.py  model_service.py  organization_service.py  project_service.py  role_service.py  (+1 more)
projects/Bioindustry_E.Coli/: project_info.yaml
projects/Project_IndPenSim/: project_info.yaml  pyproject.toml
projects/Project_IndPenSim/configs/: 0001_[python]_penicillin_RF.yaml  0002_[R]_penicillin_RF.yaml  0003_[R]_penicillin_CUBIST.yaml  0004_[R]_penicillin_CART.yaml  0005_[python]_penicillin_CART.yaml  0006_[R]_penicillin_M5.yaml  0007_[python]_penicillin_SVM.yaml  0008_[Python]_penicillin_GBM.yaml  0009_[Python]_penicillin_LSTM.yaml
projects/Project_IndPenSim/models/: .Rhistory  0002_[R]_penicillin_RF.rds
projects/Project_IndPenSim/services/r/: .Rhistory  app.R  install_dependencies.R
projects/Project_IndPenSim/services/r/config/: 0003_[R]_penicillin_CUBIST.yaml
stamm_ml_repository/: app.py  model_registry.py
stamm_ml_repository/not_indpensim/: project_info.yaml
tests/: test_app.py
(+57 files in other folders)
