[project]
name = "project-indpensim"
version = "0.1.0"
description = "Soft sensors for penicillin concentration"
authors = [
    {name = "David Camilo Corrales",email = "David-Camilo.Corrales-Munoz@inrae.fr"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "scikit-learn (==1.5.2)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
