[project]
name = "project-indpensim"
version = "0.1.0"
description = "Soft sensors for penicillin concentration"
authors = [
    {name = "David Camilo Corrales",email = "David-Camilo.Corrales-Munoz@inrae.fr"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.12)",
    "uvicorn (>=0.34.2)",
    "pyyaml (>=6.0.2)",
    "scikit-learn (==1.5.2)",
    "pandas (>=2.2.3)",
    "requests (>=2.32.3)",
    "pydantic (>=2.11.3)",
    "joblib (>=1.4.2)",
    "importlib-metadata (>=8.6.1,<9.0.0)",
    "packaging (>=25.0,<26.0)",
    "tensorflow (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
